--- a/razor-views/RazorViews/Views/Home/Index.cshtml
+++ b/razor-views/RazorViews/Views/Home/Index.cshtml
@@ -15,35 +15,40 @@
 
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Minha primeira página</title>
-    </head>
-    <body>
-        <h1>Escrevendo algo aqui</h1>
-        <h2>@appTitle</h2>
-        <form> 
-            <label>Nome</label>
-            <input type="text" /> <br>
-            <label>Email</label>
-            <input type="email" /> <br>
-            <label>Password</label>
-            <input type="password" /> <br>
-            <label>Confirm Password</label>
-            <input type="password" /> <br>
-        </form>
-        @for (var i = 0; i< 2; i++) 
-        {
-            var person = people[i];
-            <h3>@person.Name
-                    <span>, </span>
-                    @if (@person.DateOfBirth != null)
-                    {
-                        @person.DateOfBirth.Value.ToString("dd/MM/yyyy")
-                    }
-                    <span>, </span>
-                    @person.PersonGender
-                </h3>
+<head>
+    <meta charset="UTF-8" />
+    <title>Minha primeira página</title>
+</head>
+<body>
+    <h1>Escrevendo algo aqui</h1>
+    <h2>@appTitle</h2>
+    <form>
+        <label>Nome</label>
+        <input type="text" /> <br>
+        <label>Email</label>
+        <input type="email" /> <br>
+        <label>Password</label>
+        <input type="password" /> <br>
+        @*<label>Confirm Password</label>
+        <input type="password" /> <br>*@
+    </form>
+    @for (var i = 0; i < 2; i++)
+    {
+        var person = people[i];
+        <span>Texto literal/statico</span><br />
+        @: Ctrl + K, Ctrl + D - formatação
+        <br />
+        <text>Também pode ser feito com as tags <text></text></text>
+        <h3>
+            @person.Name
+            <span>, </span>
+            @if (@person.DateOfBirth != null)
+            {
+                @person.DateOfBirth.Value.ToString("dd/MM/yyyy")
             }
+            <span>, </span>
+            @person.PersonGender
+        </h3>
+    }
 </body>
 </html>
