--- a/razor-views/RazorViews/Views/Home/Index.cshtml
+++ b/razor-views/RazorViews/Views/Home/Index.cshtml
@@ -3,19 +3,6 @@
 
 @{
     List<Person>? people = (List<Person>?)@ViewData["people"];
-    //local function
-    string FormattingPeople(Person person)
-    {
-        if (person.DateOfBirth != null)
-        {
-            double age = Math.Round(((TimeSpan)(DateTime.Now - person.DateOfBirth)).TotalDays / 365.25);
-            return $"{person.Name} nasceu em {person.DateOfBirth.Value.ToString("dd/MM/yyyy")}, tem {age} anos e o seu gênero é {person.PersonGender}";
-        }
-        else
-        {
-            return $"{person.Name} não possui dados sobre o dia do seu nascimento e o seu gênero é {person.PersonGender}";
-        }
-    }
 }
 
 <!DOCTYPE html>
@@ -23,23 +10,37 @@
 <head>
     <meta charset="UTF-8" />
     <title>Minha primeira página</title>
+    <link href="~/css/StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Escrevendo algo aqui</h1>
-    <h2>@ViewData["appTitle"]</h2>
-    <form>
-        <label>Nome</label>
-        <input type="text" /> <br>
-        <label>Email</label>
-        <input type="email" /> <br>
-        <label>Password</label>
-        <input type="password" /> <br>
-        <label>Confirm Password</label>
-        <input type="password" /> <br>
-    </form>
-    @foreach (var person in people)
-    {
-        <h3>@FormattingPeople(person)</h3>
-    }
+    <div class="page-content">
+        <h1>Escrevendo algo aqui</h1>
+        <h2>@ViewData["appTitle"]</h2>
+        @foreach (var person in people)
+        {
+            <div class="box float-left w-50">
+                <h3>@person.Name</h3>
+                <table class="table w-100"> 
+                    <tbody>
+                        <tr>
+                            <th><h4>Gender</h4></th>
+                            <th><h4>Date of birth</h4></th>
+                        </tr>
+                        <tr class="text-center">
+                            <td>@person.PersonGender</td>
+                            @if (person.DateOfBirth != null)
+                            {
+                                <td>@person.DateOfBirth.Value.ToString("dd/MM/yyyy")</td>
+                            }
+                            else
+                            {
+                                <td>No data</td>
+                            }
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        }
+    </div>
 </body>
 </html>
