--- a/razor-views/RazorViews/Views/Home/Index.cshtml
+++ b/razor-views/RazorViews/Views/Home/Index.cshtml
@@ -1,10 +1,6 @@
 ﻿@using RazorViews.Models
 @using static RazorViews.Models.Person;
 
-@{
-    List<Person>? people = (List<Person>?)@ViewData["people"];
-}
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -16,7 +12,7 @@
     <div class="page-content">
         <h1>Escrevendo algo aqui</h1>
         <h2>@ViewData["appTitle"]</h2>
-        @foreach (var person in people)
+        @foreach (Person person in ViewBag.people)
         {
             <div class="box float-left w-50">
                 <h3>@person.Name</h3>
@@ -28,6 +24,7 @@
                         </tr>
                         <tr class="text-center">
                             <td>@person.PersonGender</td>
+                            @*<td>@person.DateOfBirth?.ToString("dd/MM/yyyy")</td> -> Isso ou a opção com o if*@ 
                             @if (person.DateOfBirth != null)
                             {
                                 <td>@person.DateOfBirth.Value.ToString("dd/MM/yyyy")</td>
