Creating layout views - part 2

--- a/layout-views/LayoutViews/Views/Home/Index.cshtml
+++ b/layout-views/LayoutViews/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
-<html>
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
-</html>
+<h1>Welcome</h1>
+<h2>My name is Orrana</h2>
