--- a/layout-views/LayoutViews/Views/Product/Index.cshtml
+++ b/layout-views/LayoutViews/Views/Product/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h1>Products</h1>
