--- a/layout-views/LayoutViews/Views/Product/Search.cshtml
+++ b/layout-views/LayoutViews/Views/Product/Search.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_ProductsLayout.cshtml";
 }
 
 <h1>Search products</h1>
