--- a/layout-views/LayoutViews/Views/Product/Search.cshtml
+++ b/layout-views/LayoutViews/Views/Product/Search.cshtml
@@ -1,5 +1,8 @@
 ﻿@{
-    Layout = "~/Views/Shared/_ProductsLayout.cshtml";
+    if (ViewBag.id != null)
+    {
+        Layout = "~/Views/Shared/_ProductsLayout.cshtml";
+    }
 }
 
 <h1>Search products</h1>
