Layout view sections

--- a/layout-views/LayoutViews/Views/Shared/_Layout.cshtml
+++ b/layout-views/LayoutViews/Views/Shared/_Layout.cshtml
@@ -24,6 +24,10 @@
         <div class="page-content">
             @RenderBody()
         </div>
+
+        <div class="footer-content">
+            @RenderSection("Footer", false)
+        </div>
     </div>
 </body>
 </html>
