--- a/layout-views/LayoutViews/Views/Shared/_ProductsLayout.cshtml
+++ b/layout-views/LayoutViews/Views/Shared/_ProductsLayout.cshtml
@@ -1,5 +1,9 @@
 ﻿<!DOCTYPE html>
 
+@{
+    Layout = "~/Views/Shared/_MasterLayout.cshtml";
+}
+
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
