Tarefa do módulo de Layout Views

--- a/weather-app/WeatherApp/Views/Home/Index.cshtml
+++ b/weather-app/WeatherApp/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿<!DOCTYPE html>
-@model List<CityWeather>
+﻿@model List<CityWeather>
 
 @{
     string ChooseColor(int temperature)
@@ -7,52 +6,35 @@
         if (temperature < 44)
         {
             return "#AFD5F0";
-        }else if (temperature >= 44 && temperature <= 74)
+        }
+        else if (temperature >= 44 && temperature <= 74)
         {
             return "#77dd77";
-        }else
+        }
+        else
         {
             return "#FAC898";
         }
     }
 }
-<html>
-<head>
-    <meta charset="UTF-8" />
-    <title>Home</title>
-    <link href="~/StyleSheet.css" rel="stylesheet" />
-</head>
 
-<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 18px; background-color: #f7f7f7;">
-    <div class="container">
-        <div class="page-content">
-            <div class="margin-bottom">
-
-                <h1>Weather</h1>
-            </div>
-
-            <div class="margin-top-200 margin-left">
-                <div class="flex">
-                    @foreach (CityWeather city in Model)
-                    {
-                        <div class="box cursor-pointer w-30" style="background-color:@ChooseColor(city.TemperatureFahrenheit)">
-                            <div class="flex-borderless">
-                                <div class="w-50">
-                                    <h2>@city.CityName</h2>
-                                    <h4 class="text-dark-grey">@city.DateAndTime.ToString("hh:mm tt")</h4>
-                                    <a href="~/weather/@city.CityUniqueCode" class="margin-top">Details</a>
-                                </div>
-                                <div class="w-50 border-left">
-                                    <h1 class="margin-left">@city.TemperatureFahrenheit <sup class="text-grey">&#8457</sup></h1>
-                                </div>
-                            </div>
-
-                        </div>
-                    }
+<div class="margin-top-200 margin-left">
+    <div class="flex">
+        @foreach (CityWeather city in Model)
+        {
+            <div class="box cursor-pointer w-30" style="background-color:@ChooseColor(city.TemperatureFahrenheit)">
+                <div class="flex-borderless">
+                    <div class="w-50">
+                        <h2>@city.CityName</h2>
+                        <h4 class="text-dark-grey">@city.DateAndTime.ToString("hh:mm tt")</h4>
+                        <a href="~/weather/@city.CityUniqueCode" class="margin-top">Details</a>
+                    </div>
+                    <div class="w-50 border-left">
+                        <h1 class="margin-left">@city.TemperatureFahrenheit <sup class="text-grey">&#8457</sup></h1>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
 
-</body>
-</html>
+            </div>
+        }
+    </div>
+</div>
