--- a/partial-views/PartialViews/Views/Shared/_ListPartialView.cshtml
+++ b/partial-views/PartialViews/Views/Shared/_ListPartialView.cshtml
@@ -1,12 +1,22 @@
 ﻿<div class="list-container">
-    <h3>Cities</h3>
+
+    @{
+        ViewData["listTitle"] = "Updated";
+    }
+
+    <h3>@ViewBag.listTitle</h3>
 
     <ul class="list">
-        <li>London</li>
-        <li>New York</li>
+        @foreach(string city in ViewBag.listItems)
+        {
+            <li>@city</li>
+        }
+        
+        @*<li>New York</li>
         <li>Paris</li>
         <li>Jaicos</li>
         <li>Tokio</li>
-        <li>Rome</li>
+        <li>Rome</li>*@
     </ul>
+
 </div>
