--- a/partial-views/PartialViews/Views/Home/Index.cshtml
+++ b/partial-views/PartialViews/Views/Home/Index.cshtml
@@ -1,15 +1,16 @@
 ﻿<h1>Home page</h1>
 <h2>Home page of the project</h2>
 
-@{
-    ListModel model = new ListModel();
-    model.ListTitle = "Countries";
-    model.ListItems = new List<string>()
-    {
-        "Brazil",
-        "Egypt",
-        "Russia"
-    };
-}
+<button class="button button-blue-back" type="button" id="button-load">Load Programming Languages</button>
 
-<partial name="_ListPartialView" model="model"></partial>
+<div class="box programming-languages-content">
+
+</div>
+
+<script>
+    document.querySelector("#button-load").addEventListener("click", async function() {
+        var response = await fetch("/programming-languages");
+        var languages = await response.text();
+        document.querySelector(".programming-languages-content").innerHTML = languages;
+    });
+</script>
