--- a/view-components/ViewComponents/Views/Shared/Components/Grid/Default.cshtml
+++ b/view-components/ViewComponents/Views/Shared/Components/Grid/Default.cshtml
@@ -1,23 +1,24 @@
 ﻿<div class="box">
-    <h3>Grid</h3>
+    <h3>@ViewBag.personList.GridTitle</h3>
 
     <table class="table w-100">
         <thead>
             <tr>
-                <th>Sl. No</th>
                 <th>Name</th>
+                <th>Job Title</th>
+                <th>Job Description</th>
             </tr>
         </thead>
 
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>One</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Two</td>
-            </tr>
+            @foreach (Person person in ViewBag.personList.Persons)
+            {
+                <tr>
+                    <td>@person.Name</td>
+                    <td>@person.JobTitle</td>
+                    <td>@person.JobDescription</td>
+                </tr>
+            }
         </tbody>
     </table>
 </div>
