--- a/view-components/ViewComponents/Views/_ViewImports.cshtml
+++ b/view-components/ViewComponents/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
-﻿@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+﻿@using ViewComponents.Models;
+
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
 @addTagHelper "*, ViewComponents"
