Strongly typed view components

--- a/view-components/ViewComponents/Views/Shared/Components/Grid/Sample.cshtml
+++ b/view-components/ViewComponents/Views/Shared/Components/Grid/Sample.cshtml
@@ -1,5 +1,7 @@
-﻿<div class="box">
-    <h3>@ViewBag.personList.GridTitle</h3>
+﻿@model PersonGridModel
+
+<div class="box">
+    <h3>@Model.GridTitle</h3>
 
     <table class="table w-100">
         <thead>
@@ -11,7 +13,7 @@
         </thead>
 
         <tbody>
-            @foreach (Person person in ViewBag.personList.Persons)
+            @foreach (Person person in Model.Persons)
             {
                 <tr>
                     <td>@person.Name</td>
