--- a/weather-app/WeatherApp/Views/Shared/Components/Weather/Default.cshtml
+++ b/weather-app/WeatherApp/Views/Shared/Components/Weather/Default.cshtml
@@ -1,24 +1,6 @@
 ﻿@model CityWeather
 
-@{
-    string ChooseColor(int temperature)
-    {
-        if (temperature < 44)
-        {
-            return "#AFD5F0";
-        }
-        else if (temperature >= 44 && temperature <= 74)
-        {
-            return "#77dd77";
-        }
-        else
-        {
-            return "#FAC898";
-        }
-    }
-}
-
-<div class="box cursor-pointer w-30" style="background-color:@ChooseColor(Model.TemperatureFahrenheit)">
+<div class="box cursor-pointer w-30" style="background-color:@ViewBag.TemperatureColor">
     <div class="flex-borderless">
         <div class="w-50">
             <h2>@Model.CityName</h2>
