Transient, scope and singleton

--- a/dependency-injection/DependencyInjection/Views/Home/Index.cshtml
+++ b/dependency-injection/DependencyInjection/Views/Home/Index.cshtml
@@ -13,3 +13,7 @@
         <li>@city</li>
     }
 </ul>
+
+<div>@ViewBag.InstanceId_1</div>
+<div>@ViewBag.InstanceId_2</div>
+<div>@ViewBag.InstanceId_3</div>
