--- a/dependency-injection/DependencyInjection/Views/Home/Index.cshtml
+++ b/dependency-injection/DependencyInjection/Views/Home/Index.cshtml
@@ -17,3 +17,4 @@
 <div>@ViewBag.InstanceId_1</div>
 <div>@ViewBag.InstanceId_2</div>
 <div>@ViewBag.InstanceId_3</div>
+<div class="box">@ViewBag.InstanceId_InScope</div>
