Environment in controller

--- a/environments/Environments/Views/Home/Index.cshtml
+++ b/environments/Environments/Views/Home/Index.cshtml
@@ -3,5 +3,8 @@
 }
 
 <h1>Home page</h1> <br />
-<h2>Preenchendo pagina</h2>
+<h2>Preenchendo pagina</h2> <br />
+<div class="box">
+    Environment is @ViewBag.CurrentEnvironment
+</div>
 
