--- a/configuration/Configuration/Views/Home/Index.cshtml
+++ b/configuration/Configuration/Views/Home/Index.cshtml
@@ -9,7 +9,8 @@
     <body>
         <div class="container">
             <h1>Home</h1><br />
-            <h2>@ViewBag.MyKey</h2>
+            <h2>@ViewBag.ClientID</h2> <br />
+            <h2>@ViewBag.ClientSecretKey</h2>
         </div>
 
     </body>
