--- a/crud-example/CRUDExample/Views/Persons/Index.cshtml
+++ b/crud-example/CRUDExample/Views/Persons/Index.cshtml
@@ -1,5 +1,36 @@
-﻿@{
+﻿@model IEnumerable<PersonResponse>
+
+@{
     ViewBag.Title = "Persons";
 }
 
 <h1>Persons</h1>
+<table class="table w-100 mt">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Date of birth</th>
+            <th>Age</th>
+            <th>Gender</th>
+            <th>Country</th>
+            <th>Address</th>
+            <th>Receive newsletters</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (PersonResponse person in Model)
+        {
+            <tr>
+                <td>@person.PersonName</td>
+                <td>@person.PersonEmail</td>
+                <td>@person.DateOfBirth?.ToString("dd-MM-yyyy")</td>
+                <td>@person.Age</td>
+                <td>@person.Gender</td>
+                <td>@person.Country</td>
+                <td>@person.Address</td>
+                <td>@person.ReceiveNewsLetters</td>
+            </tr>
+        }
+    </tbody>
+</table>
